# retro-rpg

./: .gitignore  CMakeLists.txt  README.md  TODO  areas.json  creatures.json  items.json  tilesets.json  weapons.json
cmake_modules/: FindJSONBOX.cmake
src/: activator.cpp  activator.hpp  area.cpp  area.hpp  armor.cpp  armor.hpp  battle.cpp  battle.hpp  bitmap_font.hpp  bitmap_text.hpp  creature.cpp  creature.hpp  creature_mover.cpp  creature_mover.hpp  creature_renderer.cpp  creature_renderer.hpp  dialogue.hpp  door.cpp  door.hpp  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  entity_renderer.cpp  entity_renderer.hpp  game_state.cpp  game_state.hpp  game_state_area.cpp  game_state_area.hpp  game_state_menu_items.cpp  game_state_menu_items.hpp  game_state_menu_status.cpp  game_state_menu_status.hpp  game_state_title.cpp  game_state_title.hpp  inventory.cpp  inventory.hpp  item.cpp  item.hpp  main.cpp  (+21 more)
src/gui/: font.cpp  font.hpp  gui.cpp  gui.hpp  menu.cpp  menu.hpp  message_box.cpp  message_box.hpp  text.cpp  text.hpp
